--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Kevlar-sudo/se3316-kabdo2-jbird43-lab4#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "csv-parse": "^5.3.2",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
