--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   "homepage": "https://github.com/Kevlar-sudo/se3316-kabdo2-jbird43-lab4#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "csv-parse": "^5.3.2",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20",
+    "node": "^19.1.0",
     "sqlite3": "^5.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
