--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "bcryptjs": "^2.4.3",
     "csv-parse": "^5.3.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "node": "^19.1.0",
     "sqlite3": "^5.1.2"
   },
